# bimeup

./: .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  PLAN.md  PROGRESS.md
.github/workflows/: ci.yml
assets/: sample.ifc
assets/shaders/: basic.frag  basic.vert  bloom.vert  bloom_down.frag  bloom_up.frag  depth_linearize.comp  depth_mip.comp  disk_marker.vert  edge_overlay.frag  edge_overlay.vert  fxaa.frag  fxaa.vert  outline.frag  rt_indoor.rgen  rt_indoor.rmiss  rt_indoor_composite.comp  rt_probe.rgen  rt_sun_composite.comp  (+21 more)
cmake/: CompileShaders.cmake  Sanitizers.cmake  asan_suppressions.txt
docs/: section_cap_next_session.md
scripts/: build_debug.bat  build_debug.sh  build_release.bat  build_release.sh
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/include/core/: Application.h  EventBus.h  Events.h  Picking.h  SceneUploader.h  Selection.h
src/core/src/: Application.cpp  Picking.cpp  SceneUploader.cpp  Selection.cpp
src/ifc/: CMakeLists.txt
src/ifc/include/ifc/: AsyncLoader.h  IfcElement.h  IfcGeometryExtractor.h  IfcHierarchy.h  IfcModel.h  IfcSiteLocation.h
src/ifc/src/: AsyncLoader.cpp  IfcGeometryExtractor.cpp  IfcHierarchy.cpp  IfcModel.cpp  IfcSiteLocation.cpp
src/renderer/: CMakeLists.txt
src/renderer/include/renderer/: AccelerationStructure.h  BloomDownPipeline.h  BloomMath.h  BloomUpPipeline.h  Buffer.h  Camera.h  ClipPlane.h  ClipPlaneManager.h  DepthLinearizePipeline.h  DepthMipPipeline.h  DescriptorSet.h  Device.h  DiskMarker.h  DiskMarkerPipeline.h  EdgeOverlayPipeline.h  FirstPersonController.h  FogMath.h  FxaaMath.h  FxaaPipeline.h  Highlight.h  Lighting.h  LinearDepth.h  MeshBuffer.h  Msaa.h  OctNormal.h  OutlineEdge.h  OutlinePipeline.h  Pipeline.h  RayTracingPipeline.h  RenderLoop.h  RenderMode.h  RtAoPass.h  RtIndoorCompositePipeline.h  RtIndoorPass.h  RtShadowPass.h  RtSunCompositePipeline.h  SectionFillPipeline.h  Shader.h  ShadowPass.h  ShadowTransmissionPipeline.h  (+21 more)
src/renderer/src/: AccelerationStructure.cpp  BloomDownPipeline.cpp  BloomMath.cpp  BloomUpPipeline.cpp  Buffer.cpp  Camera.cpp  ClipPlane.cpp  ClipPlaneManager.cpp  DepthLinearizePipeline.cpp  DepthMipPipeline.cpp  DescriptorSet.cpp  Device.cpp  DiskMarker.cpp  DiskMarkerPipeline.cpp  EdgeOverlayPipeline.cpp  FirstPersonController.cpp  FogMath.cpp  FxaaMath.cpp  FxaaPipeline.cpp  Highlight.cpp  Lighting.cpp  LinearDepth.cpp  MeshBuffer.cpp  Msaa.cpp  OctNormal.cpp  OutlineEdge.cpp  OutlinePipeline.cpp  Pipeline.cpp  RayTracingPipeline.cpp  RenderLoop.cpp  RtAoPass.cpp  RtIndoorCompositePipeline.cpp  RtIndoorPass.cpp  RtShadowPass.cpp  RtSunCompositePipeline.cpp  SectionFillPipeline.cpp  Shader.cpp  ShadowPass.cpp  ShadowTransmissionPipeline.cpp  SkyColor.cpp  (+20 more)
src/scene/: CMakeLists.txt
src/scene/include/scene/: AABB.h  AxisSectionController.h  EdgeExtractor.h  Measurement.h  Raycast.h  Scene.h  SceneBuilder.h  SceneMesh.h  SceneNode.h  SectionCapGeometry.h  SectionEdgeGeometry.h  SectionSlice.h  Slicing.h  Snap.h
src/scene/src/: AxisSectionController.cpp  EdgeExtractor.cpp  Measurement.cpp  Raycast.cpp  Scene.cpp  SceneBuilder.cpp  SceneMesh.cpp  SectionCapGeometry.cpp  SectionEdgeGeometry.cpp  SectionSlice.cpp  Slicing.cpp  Snap.cpp
src/ui/: CMakeLists.txt
src/ui/include/ui/: AxisSectionGizmo.hpp  AxisSectionPanel.h  ClipPlanesPanel.h  FirstPersonExitPanel.h  HierarchyPanel.h  ImGuiContext.h  MeasurementsPanel.h  Panel.h  PlanViewPanel.h  PropertyPanel.h  RenderQualityPanel.h  SelectionBridge.h  Theme.h  Toolbar.h  TypeVisibilityPanel.h  UIManager.h  ViewportOverlay.h
src/ui/src/: AxisSectionPanel.cpp  ClipPlanesPanel.cpp  FirstPersonExitPanel.cpp  HierarchyPanel.cpp  ImGuiContext.cpp  MeasurementsPanel.cpp  PlanViewPanel.cpp  PropertyPanel.cpp  RenderQualityPanel.cpp  SelectionBridge.cpp  Theme.cpp  Toolbar.cpp  TypeVisibilityPanel.cpp  UIManager.cpp  ViewportOverlay.cpp
tests/: CMakeLists.txt  lsan_suppressions.txt
tests/core/: ApplicationTest.cpp  CMakeLists.txt  EventBusTest.cpp  EventsTest.cpp  PickingTest.cpp  SceneUploaderTest.cpp  SelectionTest.cpp
tests/ifc/: CMakeLists.txt  test_async_loader.cpp  test_ifc_element.cpp  test_ifc_geometry_extractor.cpp  test_ifc_hierarchy.cpp  test_ifc_model.cpp  test_ifc_site_location.cpp  test_web_ifc_integration.cpp
tests/ifc/data/: site_no_lat.ifc  site_no_site.ifc
tests/platform/: CMakeLists.txt  InputTest.cpp  WindowTest.cpp
tests/renderer/: AccelerationStructureTest.cpp  BasicShaderTest.cpp  BloomDownPipelineTest.cpp  BloomMathTest.cpp  BloomUpPipelineTest.cpp  BufferTest.cpp  CMakeLists.txt  CameraTest.cpp  ClipPlaneManagerTest.cpp  ClipPlaneTest.cpp  CubeRenderTest.cpp  DepthLinearizePipelineTest.cpp  DepthMipPipelineTest.cpp  DescriptorSetTest.cpp  DeviceTest.cpp  DiskMarkerPipelineTest.cpp  DiskMarkerTest.cpp  EdgeOverlayPipelineTest.cpp  FirstPersonControllerTest.cpp  FogMathTest.cpp  FxaaMathTest.cpp  FxaaPipelineTest.cpp  HighlightTest.cpp  LightingTest.cpp  LinearDepthTest.cpp  MeshBufferTest.cpp  MsaaTest.cpp  OctNormalTest.cpp  OutlineEdgeTest.cpp  OutlinePipelineTest.cpp  PipelineTest.cpp  RayTracingPipelineTest.cpp  RenderLoopTest.cpp  RenderModeTest.cpp  RtAoPassTest.cpp  RtIndoorCompositePipelineTest.cpp  RtIndoorPassTest.cpp  RtShadowPassTest.cpp  RtSunCompositePipelineTest.cpp  SectionFillPipelineTest.cpp  (+25 more)
tests/scene/: CMakeLists.txt  test_aabb.cpp  test_axis_section_controller.cpp  test_batching.cpp  test_edge_extractor.cpp  test_measurement.cpp  test_raycast.cpp  test_scene.cpp  test_scene_builder.cpp  test_scene_mesh.cpp  test_section_cap_geometry.cpp  test_section_edge_geometry.cpp  test_slicing.cpp  test_snap.cpp
tests/ui/: AxisSectionGizmoTest.cpp  AxisSectionPanelTest.cpp  CMakeLists.txt  ClipPlanesPanelTest.cpp  FirstPersonExitPanelTest.cpp  HierarchyPanelTest.cpp  ImGuiContextTest.cpp  ImGuizmoIntegrationTest.cpp  PanelTest.cpp  PlanViewPanelTest.cpp  PropertyPanelTest.cpp  RenderQualityPanelTest.cpp  SelectionBridgeTest.cpp  ThemeTest.cpp  ToolbarTest.cpp  TypeVisibilityPanelTest.cpp  UIManagerTest.cpp  ViewportOverlayTest.cpp
(+32 files in other folders)
